2008-10-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat_mjpeg.tcl: Added a version hook to announce information from
	* tkchat_mms.tcl:   the website version check to plugins. This lets
	* tkchat.tcl:       us push the conference urls for audio/video
	                    while the conference is ongoing.

2008-10-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat_mms.tcl: Fixed error inserting into menus when non-english
	* tkchat_mjpeg.tcl: Extended de i18n for the mms plugin
	* tkchat_leo.tcl: 
	* tkchat.tcl: Minor fixes for i18n

2008-10-16  Reinhard Max  <max@suse.de>

	* tkchat_clock.tcl: Allow using time zones in addition to numeric
	offsets from GMT and default to the machine's local time zone.

2008-09-03  Kevin B. Kenny  <kennykb@acm.org>

	* tkchat.tcl: Revised the Babelfish web scraping to follow
	the move of Babelfish from Altavista to Yahoo.
	
2008-08-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* msgs/de.msg: Merged updates from Matthias Kraft.
	* tkchat.tcl:  Include the locale in http useragent string.

2008-08-15  Kevin Kenny  <kennykb@acm.org>

	* tkchat.tcl: Fixed a bug whereby the KHIM bindings were not
	always installed in the text and entry widgets.
	
2008-08-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: More i18n. Do the login dialog and some others
	* msgs/en.msg:  using tk::AmpWidget which is present in 8.4 
	* msgs/de.msg: (missing has no alt key support for ttk in <8.5)

2008-08-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Provide a version of tk::AmpMenuArgs for Tk 8.4.

2008-08-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added msgs/ directory and started to internationalize
	the menu items and some other display text.
	* msgs/en.msg: english
	* msgs/de.msg: german

2008-08-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Improved normal message handling. Display in dialog,
	added per-user context menu for posting messages/memos.